# GameIdeaGenerator

./: CMakeLists.txt  Post Build Commandline.txt  README.md
config/: 2DSubtypes.txt  3DSubtypes.txt  Creatures.txt  Emotions.txt  Genres.txt  Names.txt  PersonalityTraits.txt
src/: Generator.cpp  GetCreature.cpp  GetCreature.h  GetEmotion.cpp  GetEmotion.h  GetGenre.cpp  GetGenre.h  GetName.cpp  GetName.h  GetPersonalityTrait.cpp  GetPersonalityTrait.h  GetViewType.cpp  GetViewType.h
